project2_backtesting/outputs/last_backtest_error.txt
=== TK CALLBACK EXCEPTION ===
Time:  2026-04-22T11:38:22.345528
Type:  UnboundLocalError
Error: UnboundLocalError("cannot access local variable '_on_firm_change_acct' where it is not associated with a value")

--- Full traceback ---
Traceback (most recent call last):
  File "C:\Users\anani\AppData\Local\Programs\Python\Python312\Lib\tkinter\__init__.py", line 1968, in __call__
    return self.func(*args)
           ^^^^^^^^^^^^^^^^
  File "c:\Users\anani\my git delete\trade-bot\sidebar.py", line 491, in <lambda>
    btn_p2_refiner = _sub_btn(project2_extras, "✂️ Strategy Refiner", lambda: show_panel("p2_refiner"))
                                                                              ^^^^^^^^^^^^^^^^^^^^^^^^
  File "c:\Users\anani\my git delete\trade-bot\sidebar.py", line 157, in show_panel
    state.all_panels[name] = state.panel_builders[name]()
                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "c:\Users\anani\my git delete\trade-bot\main_app.py", line 161, in _build
    panel = build_fn()
            ^^^^^^^^^^
  File "c:\Users\anani\my git delete\trade-bot\main_app.py", line 237, in <lambda>
    "p2_refiner":        _make_builder(lambda: p2_refiner.build_panel(content), "p2_refiner"),
                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "c:\Users\anani\my git delete\trade-bot\project2_backtesting\panels\strategy_refiner_panel.py", line 3376, in build_panel
    _stage_var.trace_add("write", _on_firm_change_acct)
                                  ^^^^^^^^^^^^^^^^^^^^
UnboundLocalError: cannot access local variable '_on_firm_change_acct' where it is not associated with a value

